--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@polkadot/util": "^10.1.6",
+    "@polkadot/util-crypto": "^10.1.6",
     "@prisma/client": "^4.2.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
