Adding challenge code: 1. Added challengecode API 2. Signin API now takes challengecode as a nonce

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "pino": "^8.4.2",
-    "prisma": "^4.2.1"
+    "prisma": "^4.2.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
